#506 Fix grid whitespace with minimal data using autoHeight (#507)
* #506 Fix grid whitespace with minimal data using autoHeight

* #506 Remove deprecated grid config

--- a/src/scss/_override-variables.scss
+++ b/src/scss/_override-variables.scss
@@ -224,6 +224,10 @@ body {
   .vl-tab__pane:focus-visible {
     outline: none;
   }
+
+  .vl-tab__pane[role='tabpanel']:focus {
+    outline: none;
+  }
 }
 
 .oe-flex-1 {
